# ZMDLogs

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
data/: message_ids_cs.json  message_ids_full.json  message_ids_sc.json
jsondata/: ActorImageTable.json  CharacterNameIndex.json  Dungeon.json
overlay/: README.md  index.html  package-lock.json  vite.config.ts
overlay_buff/: OverlayBuff.json  package-lock.json  package.json  vite.config.ts
overlay_comboskill/: ComboSkillOverlay.json  README.md  metadata.json  package-lock.json  package.json  server.ts  ultimateskill.json
proto/: ACTIVITY_CONDITIONAL_STAGE_INFO.proto  ACTIVITY_INFO.proto  ACTIVITY_INFO_CONDITIONAL_MULTI_STAGE_EXTRA_DATA_PHOTO_TAKING.proto  ACTIVITY_INFO_SPECIFIED.proto  ACTIVITY_INFO_SPECIFIED_BASE_MULTI_STAGE.proto  ACTIVITY_INFO_SPECIFIED_CHAR_TRIAL.proto  ACTIVITY_INFO_SPECIFIED_CHECKIN.proto  ACTIVITY_INFO_SPECIFIED_CONDITIONAL_MULTI_STAGE.proto  ACTIVITY_INFO_SPECIFIED_GAME_ENTRANCE.proto  ACTIVITY_INFO_SPECIFIED_REFLOW.proto  ACTIVITY_INFO_SPECIFIED_WEEKLY_TASK.proto  ACTIVITY_WEEKLY_TASK_MILESTONE.proto  ADVENTURE_TASK.proto  ANTI_CHEAT_SDK_TYPE.proto  AREA_TYPE.proto  AREA_UNLOCK_INFO.proto  ATK_CALCULATION_TYPE.proto  ATK_SCALE_CALCULATION.proto  ATK_SCALE_CALCULATION_RUNTIME_ARGS.proto  ATTACH_USER_INFO.proto  ATTACKER_ATK_PROCESSOR.proto  ATTACKER_CRIT_DAMAGE_PROCESSOR.proto  ATTACKER_CRIT_RATE_PROCESSOR.proto  ATTACKER_PEN_PROCESSOR.proto  ATTR_ENHANCE_FAILED_DATA.proto  ATTR_INFO.proto  ATTR_MODIFY_DATA.proto  ATTR_MODIFY_INFO.proto  BATTLE_ACTION_EMPTY_RES.proto  (+1749 more)
(+188 files in other folders)
